# IdealX

./: .clinefiles  .dockerignore  .env.example  .gitignore  .roomodes  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  nixpacks.toml  package-lock.json  package.json  system_prompt.md  tsconfig.json
src/: ai_utils.rs  chatgpt.rs  claude.rs  index.ts  main.rs  register-commands.ts
src/commands/: age.rs  clear.rs  help.rs  summarize.rs  translate.rs
src/lib/: adapters.ts  ai.ts  bot.ts
