[package]
name = "ideal-x"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.34.0"
shuttle-runtime = "0.34.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
shuttle-secrets = "0.34.0"
tokio = "1.26.0"
tracing = "0.1.37"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
poise = "0.5.7"
chrono = "0.4.31"
