[package]
name = "ideal-x"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
shuttle-serenity = "0.53.0"
shuttle-runtime = "0.53.0"
shuttle-secrets = "0.42.0"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = "1.26.0"
tracing = "0.1.37"
regex = "1.10.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
poise = "0.6.1"
chrono = "0.4.31"
