[package]
name = "ideal-x"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ideal-x"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
regex = "1.10.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
poise = "0.6.1"
chrono = "0.4.31"
